# fog05-hypervisor-native

./: .travis.yml  Cargo.toml  Makefile  NativeFDU.py  NativeNoIsolationFDU.py  README.md  __init__.py  containerize.c  fos_native.service  isolation.py  native_plugin  native_plugin.json  no_isolation.py
etc/: config.yaml
resources/: fos-hv-native.service
resources/rpm/: template.hbs
src/: lib.rs  native.rs  types.rs
templates/: blocking_run_native_unix.sh  blocking_run_native_unix2.sh  run_native_custom_unix.sh  run_native_unix.sh  run_native_unix2.sh
templates_no_isolation/: blocking_run_native_unix.sh  blocking_run_native_unix2.sh  run_native_custom_unix.sh  run_native_unix.sh  run_native_unix2.sh  run_native_windows.ps1  run_native_windows_args.ps1
